--- a/web/fileexplorer/index.html
+++ b/web/fileexplorer/index.html
@@ -1,21 +1,21 @@
 <html>
 
 	<head>
-		<title>Library</title>
+		<title>File Explorer</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link href = "web/fileexplorer/style.css" rel = "stylesheet">
+		<link href = "style.css" rel = "stylesheet">
 	</head>
 	
 	<body>
 		<center>
-			<h1>Library</h1>
+			<h1>File Explorer</h1>
 			<div style = "color: white; width: 90%; padding-left: 10px;">
 				<a class = "stylebutton currentstyle" onclick = "relax()">Relaxed</a>|<a class = "stylebutton"onclick = "compact()">Compact</a>
 			</div>
 			<br>
 		</center>
 		<script src = "items.js"></script>
-		<script src = "web/fileexplorer/itemcreator.js"></script>
+		<script src = "itemcreator.js"></script>
 		
 	</body>
 
